app/assets/stylesheets/custom.scss
// Bootstrap Colors
$brand-primary: #317be2;
$blue-accent: #2b78e4;
$white: #fff;

ul {
  list-style: none;
}

.navbar-default .navbar-nav > li > .btn {
  color: $white;
}

#main_content {
  // clear the absolutely positioned navbar
  margin-top: 65px;
}

.control-label{
  margin: 5px;
  padding-bottom: 7px;
}

.form-control {
  margin-right: 5px;
}

.sign_up_text {
  margin-top: 65px;
  font-size: 1.25em;
  line-height: 1.75;
}

.navbar-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    width: 100% !important;
    left: 0;
    z-index: 20;
}

/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper > .container {
    padding-right: 0;
    padding-left: 0;
    width: inherit;
}

.navbar-wrapper .navbar {
    width: 100% !important;
    border-radius: 0px;
}

.navbar-nav li {
  margin-right: 15px;
  line-height: 50px;
}

#logged-out-nav, #logged-in-nav {
  background-color: $brand-primary;
  border-color: #2660b0;
  margin-bottom: 0 -15px;
  color: #FFF;
  font-size: 1.25em;

   #log-out-link {
     font-size: 0.7em;
   }
  a{
    color: #FFF;
  }
  a:hover {
    text-decoration: underline;
  }
}
#tagline {
  height: 75px;
}
#about-me {
  height: 200px;
}

#profile-banner{
  width: 100%;
  .banner-wrapper {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 0% 65%;
    min-height: 350px;
  img { height: 170px;
          position: relative;;
          left: 15px;
          top: 215px;
          z-index:1;
        }
  }
}

#content {
  .panel-heading{
    text-align:center;
  }
  #edit-profile {
    position: relative;
    left: 315px;
  }
  h3 {
    font-size: 1.25em;
    display: inline-block;
  }
  h4 {
    text-align:center;
  }
  .titles {
    font-weight: bold;
    line-height: 1.75;
  }
  ul {
    list-style: none;
  }
  textarea{
    width: 100%;
  }
  #save_changes {
    font-size: 1.4em;
    margin-top: 30px;
    height: 80px;
    width: 220px;
    position: relative;
    left: 40%;
  }
  img {
    height: 150px;
    width: 150px;
    margin-top: 15px;
    margin-bottom: 15px;
  }
  article {
    padding: 15px;
    margin: 8px;
    border-style: solid;
    border-width: thin;
    border-color: gray;
    div { display: inline-block;
          padding-right: 50px;
          padding-left: 30px;
          vertical-align: middle;}
    img { height: 70px;
          width: 70px; }
  }
}

